# xtShaderToy

./: CMakeLists.txt  LICENSE  README.md
res/: Canvas.fs  Full Spectrum Cyber.fs  Shader Art Coding Introduction.fs  Shader List.txt
src/: main-test.cpp  main.cpp  xtShaderToy.cpp  xtShaderToy.h
src/glad/: glad.c  glad.h
win/: xtShaderToy.sln  xtShaderToy.vcxproj  xtShaderToy.vcxproj.filters
